[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaurav Govindwani",email = "gaurav1211govindwani@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
